--- a/css/style.css
+++ b/css/style.css
@@ -63,7 +63,7 @@ main {
 }
    .about-me-text{
        padding: 20px;
-       color: cornsilk;
+       color: rgb(226, 204, 115);
    }
 .hexagon {
       width: 150px;
